--- a/app/static/app/base.css
+++ b/app/static/app/base.css
@@ -52,7 +52,7 @@ nav a {
 }
 
 nav a:hover {
-    color: #7CFC00; /* світло-зелений при наведенні */
+    color: #00bfff; /* світло-зелений при наведенні */
 }
 
 main {
