--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -11,7 +11,10 @@
 <body style="background: url('{% static 'app/images/winter-bg.jpg' %}') no-repeat center center fixed; background-size: cover; min-height: 100vh; width: 100%; color: white;">
 <header>
     <div class="logo">
+        <img src="{% static 'app/images/christmas_toy.png' %}" alt="Avatar"
+             style="width: 15px; height: 22px; object-fit: cover; margin-bottom: 20px;">
         <a href="{% url 'home_page' %}">TrainCrew</a>
+
     </div>
     <nav>
         {% if user.is_authenticated %}
@@ -33,7 +36,7 @@
     {% block content %}{% endblock %}
 </main>
 <script>
-const numFlakes = 70;
+const numFlakes = 30;
 window.addEventListener('DOMContentLoaded', () => {
     for (let i = 0; i < numFlakes; i++) {
         const flake = document.createElement('div');
