--- a/app/templates/app/profile.html
+++ b/app/templates/app/profile.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 <div class="profile-container">
-<div style="display: flex; gap: 15px; justify-content: flex-start; margin-left: 20px; align-items: center;">
+<div style="display: flex; gap: 15px; justify-content: flex-start; margin-left: 100px;">
     {% if profile.avatar %}
         <img src="{{ profile.avatar.url }}" alt="Avatar"
              style="width: 120px; height: 120px; object-fit: cover; border: 3px solid white;">
@@ -34,11 +34,54 @@
             margin: 0;">
             {{ profile.name }}
         </h3>
+<div class="profile-stats">
+    <p>Posts: {{ posts_count }}</p>
+    <p>Followers: {{ followers_count }}</p>
+    <p>Following: {{ following_count }}</p>
+</div>
 
 {% if not owner %}
-    <a href="{% url 'start_chat' profile.user.username %}" class="btn btn-primary">
+    <a href="{% url 'start_chat' profile.user.username %}" class="btn btn-primary" style="
+       display: inline-block;
+       margin-top: 10px;
+       padding: 8px 16px;
+       border-radius: 8px;
+       background-color: #00bfff;
+       color: white;
+       text-decoration: none;
+       font-weight: bold;
+   " >
         Написати користувачу
     </a>
+        {% if user in profile.followers.all %}
+        <form action="{% url 'follow_toggle' profile.user.username %}" method="post">
+            {% csrf_token %}
+            <button type="submit" style="
+       display: inline-block;
+       margin-top: 10px;
+       padding: 8px 16px;
+       border-radius: 8px;
+       background-color: #00bfff;
+       color: white;
+       text-decoration: none;
+       font-weight: bold;
+   ">Unfollow</button>
+        </form>
+    {% else %}
+        <form action="{% url 'follow_toggle' profile.user.username %}" method="post">
+            {% csrf_token %}
+            <button type="submit" style="
+       display: inline-block;
+       margin-top: 10px;
+       padding: 8px 16px;
+       border-radius: 8px;
+       background-color: #00bfff;
+       color: white;
+       text-decoration: none;
+       font-weight: bold;
+   ">Follow</button>
+        </form>
+    {% endif %}
 {% endif %}
 
         {% if owner %}
