--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -19,6 +19,7 @@
     <nav>
         {% if user.is_authenticated %}
             <a href="{% url 'profile' %}">Profile</a>
+            <a href="{% url 'map' %}">Map</a>
             <a href="{% url 'logout' %}">Logout</a>
             <a href="{% url 'user_search' %}">Search</a>
             <a href="{% url 'chat_list'  %}">Chat</a>
