--- a/app/templates/app/login.html
+++ b/app/templates/app/login.html
@@ -1,7 +1,7 @@
-{% extends 'app/base.html' %}
-{% block title %}Вхід{% endblock %}
+{% extends 'app/base_auth.html' %}
+{% block title %}Traincrew{% endblock %}
 {% block content %}
-<h2>Вхід</h2>
+<h2>Login</h2>
 <form method="post">
     {% csrf_token %}
     <input type="text" name="username" placeholder="Логін" required><br><br>
