--- a/app/templates/app/login.html
+++ b/app/templates/app/login.html
@@ -6,6 +6,6 @@
     {% csrf_token %}
     <input type="text" name="username" placeholder="Логін" required><br><br>
     <input type="password" name="password" placeholder="Пароль" required><br><br>
-    <button type="submit">Увійти</button>
+    <button type="submit">Login</button>
 </form>
 {% endblock %}
