--- a/app/templates/app/base_auth.html
+++ b/app/templates/app/base_auth.html
@@ -1,4 +1,4 @@
-<!-- templates/base_auth.html -->
+<!-- templates/base_auth.css.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Auth{% endblock %}</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'app/base.css' %}">
+    <link rel="stylesheet" href="{% static 'app/base_auth.css' %}">
 </head>
 <body style="background: url('{% static 'app/images/winter-bg.jpg' %}') no-repeat center center fixed; background-size: cover; min-height: 100vh; width: 100%; color: white;">
     <div class="auth-container">
