--- a/app/templates/app/register.html
+++ b/app/templates/app/register.html
@@ -7,6 +7,7 @@
     {% csrf_token %}
     <input name="username" type="text" placeholder="Username" required><br><br>
     <input name="display_name" type="text" placeholder="Display Name" required><br><br>
+    <input name="email" type="email" placeholder="Email" required><br><br>
     <input name="password" type="password" placeholder="Password" required><br><br>
     <button type="submit">Create Account</button>
 </form>
