--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -18,9 +18,11 @@
     </div>
     <nav>
         {% if user.is_authenticated %}
+            <a href="{% url 'create_post' %}">+</a>
             <a href="{% url 'map' %}">Map</a>
-            <a href="{% url 'user_search' %}">Search</a>
             <a href="{% url 'chat_list'  %}">Chat</a>
+            <a href="{% url 'user_search' %}">🔍︎</a>
+
         {% endif %}
 
     </nav>
@@ -52,7 +54,7 @@
     {% block content %}{% endblock %}
 </main>
 <script>
-const numFlakes = 30;
+const numFlakes = 10;
 window.addEventListener('DOMContentLoaded', () => {
     for (let i = 0; i < numFlakes; i++) {
         const flake = document.createElement('div');
