--- a/app/templates/app/login.html
+++ b/app/templates/app/login.html
@@ -1,11 +1,17 @@
 {% extends 'app/base_auth.html' %}
 {% block title %}Traincrew{% endblock %}
+
 {% block content %}
 <h2>Login</h2>
 <form method="post">
     {% csrf_token %}
-    <input type="text" name="username" placeholder="Логін" required><br><br>
-    <input type="password" name="password" placeholder="Пароль" required><br><br>
+    <input type="text" name="username" placeholder="Username" required><br><br>
+    <input type="password" name="password" placeholder="Password" required><br><br>
     <button type="submit">Login</button>
 </form>
+
+<p style="margin-top:15px; color: #ccc;">
+    Don't have an account yet?
+    <a href="{% url 'register' %}" style="color: #00bfff; text-decoration: none;">Sign up</a>
+</p>
 {% endblock %}
