--- a/app/templates/app/register.html
+++ b/app/templates/app/register.html
@@ -11,4 +11,9 @@
     <input name="password" type="password" placeholder="Password" required><br><br>
     <button type="submit">Create Account</button>
 </form>
+
+<p style="margin-top:15px; color: #ccc;">
+    Already have an account?
+    <a href="{% url 'login' %}" style="color: #00bfff; text-decoration: none;">Log in</a>
+</p>
 {% endblock %}
